--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,7 @@ line-length = 100
 target-version = "py312"
 
 [tool.ruff.lint]
-select = [
-    "E",  # pycodestyle
-    "F",  # pyflakes
-    "I",  # isort
-    "B",  # flake8-bugbear
-    "UP", # pyupgrade
-]
+select = ["E", "F", "I", "B", "UP"]
 fixable = ["ALL"]
 
 [tool.ruff.format]
